# netx

./: .eslintignore  .eslintrc.json  .gitignore  .npmrc  .nxignore  .prettierignore  AGENTS.md  BRIEFING.md  CLAUDE.md  FIBERMAP-SPEC.md  FIBERMAP-STATUS.md  LICENSE  NOTICE.md  README.md  commitlint.config.js  ecosystem.config.js  eslint.config.js  eslint.config.mjs  jest.config.base.js  nx.json  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json  settings.json  settings.local.json
apps/nms/apps/device-gateway/: Dockerfile  README.md  pyproject.toml
apps/nms/apps/device-gateway/contracts/: DeviceJob.schema.json  DeviceJobResult.schema.json
apps/nms/apps/device-gateway/src/device_gateway/: backup.py  checks.py  crypto.py  main.py  network.py  playbooks.py  safety.py  telegraf_snmp.py  worker.py
apps/nms/apps/device-gateway/src/device_gateway/drivers/: __init__.py  base.py  cisco_iosxe.py  juniper.py  mikrotik.py  parks.py
apps/nms/apps/device-gateway/tests/: test_crypto.py  test_drivers.py  test_network.py  test_safety.py  test_telegraf_snmp.py
design_handoff_cpe_manager/: Gerenciador CPE TR-069.dc.html  README.md
design_handoff_netx_shell/: NetX.dc.html  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONVENTIONS-FRONTEND.md  MULTI-TENANCY.md  MVP-SPEC.md  ROADMAP.md  RUNBOOK.md  SCALING-DEV-TEAM.md  SECURITY.md  STACK-REFRESH.md  VPS-DEBIAN-12.md  deploy-contracts.md  dr.md  i18n-audit-2026-06-01.md  licensing.md  radius-setup.md
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: install-vps.sh  (+7 more)
(+1227 files in other folders)
