[project]
name = "netx-device-gateway"
version = "0.0.0"
description = "NetX NMS — único serviço autorizado a falar com equipamentos (Juniper + Mikrotik). Consome jobs da fila."
requires-python = ">=3.12"
dependencies = [
  "bullmq>=2.10.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "jsonschema>=4.23.0",
  "structlog>=24.4.0",
  "cryptography>=43.0.0",
  "websockets>=13.0",
]

# Libs que tocam equipamento. Instaladas na Fase 1 (`uv sync --extra devices`) para manter
# o scaffold da Fase 0 leve. SOMENTE este serviço importa estas libs.
[project.optional-dependencies]
devices = [
  "napalm>=5.0.0",
  "junos-eznc>=2.7.0",
  "netmiko>=4.4.0",
  "pysnmp>=6.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
device-gateway = "device_gateway.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/device_gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
